--- a/app/src/main/res/layout/channel_message_comment_recycler_item.xml
+++ b/app/src/main/res/layout/channel_message_comment_recycler_item.xml
@@ -100,7 +100,7 @@
         <com.estello.android.ViewModel.RichLinkView.RichLinkView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/richlinkview"/>
+            android:id="@+id/Commentsrichlinkview"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
