--- a/app/src/main/res/layout/text_formatting_toolbar_layout.xml
+++ b/app/src/main/res/layout/text_formatting_toolbar_layout.xml
@@ -92,45 +92,13 @@
                 android:id="@+id/AttachmentLayout"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:gravity="center"
-                    android:visibility="visible"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/yellow_colored_circle">
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:padding="3dp"
-                        android:tint="#F5C23A"
-                        android:src="@drawable/iconfinder_idea"/>
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:gravity="center"
-                    android:layout_marginRight="5dp"
-                    android:visibility="visible"
-                    android:background="@drawable/colored_circle_outline">
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:padding="3dp"
-                        android:tint="@color/blue"
-                        android:src="@drawable/newquestionicon"/>
-                </LinearLayout>
                 <ImageView
                     android:layout_width="22dp"
                     android:layout_height="28dp"
-                    android:layout_marginRight="25dp"
+                    android:layout_marginRight="7dp"
                     android:id="@+id/DisplayFormatToolbarIcon"
                     android:src="@drawable/format_icon"
-                    android:tint="@color/dark_text_color" />
+                    android:tint="#4E4E4E" />
 
                 <LinearLayout
                     android:layout_width="30dp"
@@ -144,7 +112,7 @@
                         android:layout_height="25dp"
                         android:paddingBottom="3dp"
                         android:id="@+id/messaging_area_picture_select2_bottomsheet"
-                        android:tint="@color/dark_text_color"
+                        android:tint="#4E4E4E"
                         android:src="@drawable/camera_icon"/>
                 </LinearLayout>
 
@@ -154,7 +122,7 @@
                     android:padding="2dp"
                     android:src="@drawable/newfileuploadicon"
                     android:id="@+id/messaging_area_bottomsheet_file_select2"
-                    android:tint="@color/dark_text_color" />
+                    android:tint="#4E4E4E"/>
 
                 <LinearLayout
                     android:layout_width="30dp"
