--- a/app/src/main/res/drawable/light_dark_outline_circle.xml
+++ b/app/src/main/res/drawable/light_dark_outline_circle.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/dark_text_color"
+        android:color="#4E4E4E"
         >
 
     </stroke>
