--- a/app/src/main/res/layout/activity_channel_base.xml
+++ b/app/src/main/res/layout/activity_channel_base.xml
@@ -90,16 +90,73 @@
   </LinearLayout>
 </androidx.appcompat.widget.Toolbar>
 
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/channel_base_nested_scroll">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="2dp"
+                android:orientation="vertical">
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:focusableInTouchMode="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginRight="20dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="# Vh-Premium-info"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:fontFamily="@font/airsemi"/>
+
+            <com.deltastream.example.edittextcontroller.RTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/airreg"
+                android:lineSpacingExtra="5dp"
+                android:text="\@vanhack-deza created this channel November 7th, 2018. This is very beginning of the #vh-premium-info channel"
+                android:textColor="#4E4E4E"
+                android:textSize="15dp"/>
+
+            <com.deltastream.example.edittextcontroller.RTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/airreg"
+                android:lineSpacingExtra="5dp"
+                android:text="Purpose: A place to answer questions about Vanhack Premium services and any info related to premium services"
+                android:textColor="#4E4E4E"
+                android:textSize="15dp"/>
+
+
+        </LinearLayout>
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/channel_post_recyclerview"
-            android:layout_marginBottom="50dp"
+            android:nestedScrollingEnabled="false"
+            android:paddingBottom="50dp"
             tools:listitem="@layout/channel_post_recyler_item">
         </androidx.recyclerview.widget.RecyclerView>
 
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
     </LinearLayout>
     <include layout="@layout/post_creation_area_bottomsheet"/>
 
