--- a/app/src/main/res/layout/record_view_bottomsheet_type1.xml
+++ b/app/src/main/res/layout/record_view_bottomsheet_type1.xml
@@ -142,7 +142,7 @@
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:tint="@color/dark_text_color"
+            android:tint="#4E4E4E"
             android:src="@drawable/new_mic_icon"/>
 
     </LinearLayout>
