--- a/app/src/main/res/layout/activity_channel_post_details.xml
+++ b/app/src/main/res/layout/activity_channel_post_details.xml
@@ -44,15 +44,15 @@
                         android:layout_marginLeft="10dp"
                         android:text="Details"
                         android:textColor="@color/black"
-                        android:textSize="21dp" />
+                        android:textSize="21dp"/>
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/channel_detail_nested_scroll"
-            android:layout_marginBottom="50dp">
+            android:paddingBottom="44dp"
+            android:id="@+id/channel_detail_nested_scroll">
 
             <LinearLayout
                 android:layout_width="match_parent"
