--- a/app/src/main/res/layout/forum_post_item_attachments_type_video.xml
+++ b/app/src/main/res/layout/forum_post_item_attachments_type_video.xml
@@ -26,16 +26,14 @@
           android:id="@+id/attachment_video_loader_view"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:elevation="2dp"
-          android:background="#50000000"
+          android:elevation="3dp"
           android:visibility="gone"
           app:lottie_rawRes="@raw/circleloader"
           app:lottie_autoPlay="true"
           app:lottie_loop="true"/>
 
-
       <com.facebook.drawee.view.SimpleDraweeView
-         xmlns:fresco = "http://schemas.android.com/apk/res-auto"
+          xmlns:fresco = "http://schemas.android.com/apk/res-auto"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           fresco:placeholderImage="@drawable/greyimage"
@@ -43,31 +41,101 @@
           android:elevation="2dp"
           android:id="@+id/attachment_video_thumbnail"
           fresco:placeholderImageScaleType="centerCrop"/>
+
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:background="#50000000"
-          android:gravity="center"
-          android:id="@+id/attachment_video_play_circle_layout"
-          android:elevation="2dp">
+          android:id="@+id/video_attachments_controller"
+          android:elevation="5dp">
 
+
+      <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:background="#90000000"
+          android:gravity="center"
+          android:id="@+id/video_attachments_transparent_overlay">
 
 
         <LinearLayout
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:gravity="center"
-            android:layout_marginTop="5dp"
-            android:foregroundTint="@color/blue"
-            android:background="@drawable/white_outline_circle">
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:weightSum="5"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            android:id="@+id/video_attachments_progress_layout"
+            android:layout_alignParentBottom="true"
+            android:gravity="bottom">
 
-          <ImageView
-              android:layout_width="40dp"
-              android:layout_height="40dp"
-              android:src="@drawable/ic_play_arrow_white_36dp"
-              android:tint="#70FFFFFF" />
+          <TextView
+              android:layout_width="0dp"
+              android:layout_height="match_parent"
+              android:layout_weight="0.7"
+              android:textColor="@color/white"
+              android:text="1:15:01"
+              android:textSize="14dp"
+              android:id="@+id/video_attachments_playing_duration"
+              android:fontFamily="@font/airreg"
+              android:layout_marginLeft="10dp"
+              android:gravity="center"/>
+
+          <LinearLayout
+              android:layout_width="0dp"
+              android:layout_height="match_parent"
+              android:layout_weight="3.8"
+              android:gravity="center">
+
+            <SeekBar
+                android:layout_width="0dp"
+                android:layout_height="7dp"
+                android:progress="0"
+                android:layout_weight="3"
+                android:layout_marginRight="5dp"
+                android:id="@+id/video_attachments_progressbar"
+                android:progressDrawable="@drawable/video_playing_progress_bar" />
+          </LinearLayout>
+
+          <LinearLayout
+              android:layout_width="0dp"
+              android:layout_height="match_parent"
+              android:gravity="center"
+              android:id="@+id/video_attachments_fullscreen_layout"
+              android:layout_marginRight="5dp"
+              android:layout_weight="0.5">
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:tint="@color/white"
+                android:src="@drawable/iconfinder_fullscreen_1031516"/>
+          </LinearLayout>
+
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+          <LinearLayout
+              android:layout_width="85dp"
+              android:layout_height="85dp"
+              android:gravity="center"
+              android:layout_marginTop="5dp"
+              android:foregroundTint="@color/blue"
+              android:id="@+id/video_attachments_play_pause_circle_layout"
+              android:background="@drawable/white_outline_circle">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/video_attachments_play_pause_icon"
+                android:src="@drawable/ic_play_arrow_white_36dp"
+                android:tint="#70FFFFFF"/>
+          </LinearLayout>
+
+        </LinearLayout>
+      </RelativeLayout>
       </LinearLayout>
       <com.google.android.exoplayer2.ui.PlayerView
           android:id="@+id/player_view"
@@ -77,7 +145,5 @@
           app:surface_type="texture_view"
           app:use_controller="false"/>
     </FrameLayout>
-
-
   </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
