--- a/app/src/main/res/layout/forum_post_item_attachments_type_video.xml
+++ b/app/src/main/res/layout/forum_post_item_attachments_type_video.xml
@@ -24,11 +24,12 @@
 
       <com.airbnb.lottie.LottieAnimationView
           android:id="@+id/attachment_video_loader_view"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:elevation="3dp"
+          android:layout_width="150dp"
+          android:layout_height="150dp"
+          android:elevation="6dp"
           android:visibility="gone"
-          app:lottie_rawRes="@raw/loadinground"
+          android:layout_gravity="center"
+          app:lottie_rawRes="@raw/loader"
           app:lottie_autoPlay="true"
           app:lottie_loop="true"/>
 
@@ -73,10 +74,10 @@
               android:layout_weight="0.7"
               android:textColor="@color/white"
               android:text="1:15:01"
-              android:textSize="14dp"
+              android:textSize="12dp"
               android:id="@+id/video_attachments_playing_duration"
               android:fontFamily="@font/airreg"
-              android:layout_marginLeft="10dp"
+              android:layout_marginLeft="5dp"
               android:gravity="center"/>
 
           <LinearLayout
@@ -85,14 +86,22 @@
               android:layout_weight="3.8"
               android:gravity="center">
 
-            <SeekBar
-                android:layout_width="0dp"
-                android:layout_height="7dp"
-                android:progress="0"
-                android:layout_weight="3"
-                android:layout_marginRight="5dp"
+            <com.warkiz.widget.IndicatorSeekBar
                 android:id="@+id/video_attachments_progressbar"
-                android:progressDrawable="@drawable/video_playing_progress_bar" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:isb_indicator_color="@color/colorPrimary"
+                app:isb_min="0"
+                app:isb_thumb_color="@color/colorPrimary"
+                app:isb_only_thumb_draggable="false"
+                app:isb_progress="25"
+                app:isb_seek_smoothly="true"
+                app:isb_show_indicator="rounded_rectangle"
+                app:isb_show_thumb_text="false"
+                app:isb_thumb_size="13dp"
+                app:isb_track_background_size="2dp"
+                app:isb_track_progress_color="@color/colorPrimary"
+                app:isb_user_seekable="true" />
           </LinearLayout>
 
           <LinearLayout
