--- a/app/src/main/res/drawable/audio_listening_progress_drawable.xml
+++ b/app/src/main/res/drawable/audio_listening_progress_drawable.xml
@@ -1,31 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@android:id/background" android:top="3dp"
-        android:bottom="3dp" android:left="5dp">
+    <item android:id="@android:id/background" android:height="2dp" android:top="8.5dp">
         <shape>
-            <solid android:color="#FFECECEC"/>
-            <corners android:radius="10dp"/>
+            <solid android:color="#D5E6FF"/>
+            <corners android:radius="1dp"/>
         </shape>
     </item>
-    <item android:id="@android:id/progress">
+    <item android:id="@android:id/progress" android:height="2dp" android:top="8.5dp">
         <clip>
-            <layer-list>
-                <item>
-                    <color  android:color="@color/transparent"/>
-                </item>
-
-                <item
-                    android:left="3dp"
-                    android:top="3dp"
-                    android:right="3dp"
-                    android:bottom="3dp">
-                    <shape>
-                        <solid android:color="@color/colorPrimary"/>
-                        <corners android:radius="5dp"/>
-                    </shape>
-                </item>
-
-            </layer-list>
+          <shape>
+              <corners android:radius="1.5dp"/>
+              <solid android:color="@color/colorPrimary"/>
+          </shape>
+        </clip>
+    </item>
+    <item android:id="@android:id/secondaryProgress" android:height="2dp" android:top="8.5dp">
+        <clip>
+            <shape>
+                <corners android:radius="1dp"/>
+                <solid android:color="@color/toolbar_light_primary"/>
+            </shape>
         </clip>
     </item>
 </layer-list>
