--- a/app/src/main/res/layout/forum_post_item_attachments_type_video.xml
+++ b/app/src/main/res/layout/forum_post_item_attachments_type_video.xml
@@ -86,22 +86,14 @@
               android:layout_weight="3.8"
               android:gravity="center">
 
-            <com.warkiz.widget.IndicatorSeekBar
+
+            <androidx.appcompat.widget.AppCompatSeekBar
                 android:id="@+id/video_attachments_progressbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:isb_indicator_color="@color/colorPrimary"
-                app:isb_min="0"
-                app:isb_thumb_color="@color/colorPrimary"
-                app:isb_only_thumb_draggable="false"
-                app:isb_progress="25"
-                app:isb_seek_smoothly="true"
-                app:isb_show_indicator="rounded_rectangle"
-                app:isb_show_thumb_text="false"
-                app:isb_thumb_size="13dp"
-                app:isb_track_background_size="2dp"
-                app:isb_track_progress_color="@color/colorPrimary"
-                app:isb_user_seekable="true" />
+                android:progress="40"
+                android:progressDrawable="@drawable/audio_listening_progress_drawable"
+                android:thumbTint="@color/colorPrimary" />
           </LinearLayout>
 
           <LinearLayout
