--- a/app/src/main/res/layout/forum_post_item_video_attachments_recyclerview.xml
+++ b/app/src/main/res/layout/forum_post_item_video_attachments_recyclerview.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="300dp">
 
-    <com.arthurivanets.arvi.widget.PlayableItemsRecyclerView
+    <com.estello.android.Arvi.widget.PlayableItemsRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:itemCount="1"
         android:id="@+id/forum_post_item_playable_recyclerview"
         tools:listitem="@layout/forum_post_item_attachments_type_video">
 
-    </com.arthurivanets.arvi.widget.PlayableItemsRecyclerView>
+    </com.estello.android.Arvi.widget.PlayableItemsRecyclerView>
 </LinearLayout>
