--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,293 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layerType="hardware"
+    android:id="@+id/activity_main_drawer_layout"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.estello.android.splashscreen.Model.NoSwipeableViewPager
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/content_frame"
-            android:layout_marginBottom="55.5dp"
-            android:orientation="vertical">
+    <include layout="@layout/activity_main_content"/>
 
-        </com.estello.android.splashscreen.Model.NoSwipeableViewPager>
+    <com.google.android.material.navigation.NavigationView
+      android:layout_width="300dp"
+      android:id="@+id/activity_main_profile_nav_view"
+      android:layout_height="match_parent"
+      android:layout_gravity="end">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/white"
-            android:layout_gravity="bottom"
-            android:layout_alignParentBottom="true">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="#605A5959" />
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:id="@+id/chip_navigation"
-                app:menu="@menu/bottom_menu"
-                app:itemIconSize="24dp"
-                android:paddingTop="10dp"
-                style="@style/Widget.BottomNavigationStyle"
-                app:labelVisibilityMode="labeled"/>
-
-        </LinearLayout>
-    </FrameLayout>
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:orientation="vertical">
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+          <ScrollView
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+              <LinearLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical"
+                  android:layout_marginTop="10dp">
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="70dp"
+                      android:layout_marginTop="15dp"
+                      android:layout_marginLeft="15dp"
+                      android:layout_marginRight="15dp"
+                      android:orientation="horizontal">
+
+                      <ImageView
+                          android:layout_width="60dp"
+                          android:layout_height="60dp"
+                          android:src="@drawable/woman2"/>
+
+                      <TextView
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:gravity="center|left"
+                          android:layout_marginLeft="15dp"
+                          android:textColor="@color/black"
+                          android:maxLines="1"
+                          android:ellipsize="end"
+                          android:fontFamily="@font/opensanssemibold"
+                          android:textSize="@dimen/regular_text_size"
+                          android:text="Damilola Akinterinwa"/>
+                  </LinearLayout>
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="50dp"
+                      android:gravity="center|left"
+                      android:paddingLeft="20dp"
+                      android:id="@+id/activity_main_user_profile_view_profile_layout"
+                      android:background="@drawable/user_profile_view_profile_background"
+                      android:layout_marginLeft="15dp"
+                      android:layout_marginRight="15dp">
+
+                      <ImageView
+                          android:layout_width="20dp"
+                          android:layout_height="20dp"
+                          android:src="@drawable/user_male_2x" />
+
+                      <TextView
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_marginLeft="20dp"
+                          android:gravity="center|left"
+                          android:text="View profile"
+                          android:id="@+id/user_profile_view_profile"
+                          android:fontFamily="@font/opensansreg"
+                          android:textSize="@dimen/regular_text_size"
+                          android:textColor="#4E4E4E" />
+                  </LinearLayout>
+
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="40dp"
+                      android:layout_marginTop="20dp"
+                      android:gravity="center|left"
+                      android:layout_marginLeft="15dp"
+                      android:orientation="horizontal"
+                      android:layout_marginRight="15dp">
+
+                      <ImageView
+                          android:layout_width="20dp"
+                          android:layout_height="20dp"
+                          android:src="@drawable/newdownload"
+                          android:tint="#201D1D" />
+
+
+                      <TextView
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_marginLeft="20dp"
+                          android:gravity="center|left"
+                          android:text="Downloads"
+                          android:fontFamily="@font/opensansreg"
+                          android:textSize="@dimen/regular_text_size"
+                          android:textColor="@color/black" />
+                  </LinearLayout>
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="40dp"
+                      android:layout_marginTop="5dp"
+                      android:gravity="center|left"
+                      android:layout_marginLeft="15dp"
+                      android:orientation="horizontal"
+                      android:layout_marginRight="15dp">
+
+                      <ImageView
+                          android:layout_width="20dp"
+                          android:layout_height="20dp"
+                          android:src="@drawable/dollar_coin_2x"
+                          android:tint="#201D1D" />
+
+
+                      <TextView
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_marginLeft="20dp"
+                          android:gravity="center|left"
+                          android:text="Earnings"
+                          android:fontFamily="@font/opensansreg"
+                          android:textSize="@dimen/regular_text_size"
+                          android:textColor="@color/black" />
+                  </LinearLayout>
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="40dp"
+                      android:layout_marginTop="5dp"
+                      android:gravity="center|left"
+                      android:layout_marginLeft="15dp"
+                      android:orientation="horizontal"
+                      android:layout_marginRight="15dp">
+
+                      <ImageView
+                          android:layout_width="20dp"
+                          android:layout_height="20dp"
+                          android:src="@drawable/checkmark_2x"
+                          android:tint="#201D1D" />
+
+
+                      <TextView
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_marginLeft="20dp"
+                          android:gravity="center|left"
+                          android:text="Verification"
+                          android:fontFamily="@font/opensansreg"
+                          android:textSize="@dimen/regular_text_size"
+                          android:textColor="@color/black" />
+                  </LinearLayout>
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="40dp"
+                      android:layout_marginTop="5dp"
+                      android:gravity="center|left"
+                      android:layout_marginLeft="15dp"
+                      android:orientation="horizontal"
+                      android:layout_marginRight="15dp">
+
+                      <ImageView
+                          android:layout_width="20dp"
+                          android:layout_height="20dp"
+                          android:src="@drawable/newsettings"
+                          android:tint="#201D1D" />
+
+
+                      <TextView
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_marginLeft="20dp"
+                          android:gravity="center|left"
+                          android:text="Settings"
+                          android:fontFamily="@font/opensansreg"
+                          android:textSize="@dimen/regular_text_size"
+                          android:textColor="@color/black" />
+                  </LinearLayout>
+
+                  <View
+                      android:layout_width="match_parent"
+                      android:layout_height="0.5dp"
+                      android:layout_marginTop="15dp"
+                      android:background="#DFDFDF"/>
+
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="40dp"
+                      android:layout_marginTop="20dp"
+                      android:gravity="center|left"
+                      android:layout_marginLeft="15dp"
+                      android:orientation="horizontal"
+                      android:layout_marginRight="15dp">
+
+                      <ImageView
+                          android:layout_width="20dp"
+                          android:layout_height="20dp"
+                          android:src="@drawable/addfriends"
+                          android:tint="#201D1D" />
+
+
+                      <TextView
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_marginLeft="20dp"
+                          android:gravity="center|left"
+                          android:text="Invite a friend"
+                          android:fontFamily="@font/opensansreg"
+                          android:textSize="@dimen/regular_text_size"
+                          android:textColor="@color/black" />
+                  </LinearLayout>
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="40dp"
+                      android:layout_marginTop="5dp"
+                      android:gravity="center|left"
+                      android:layout_marginLeft="15dp"
+                      android:orientation="horizontal"
+                      android:layout_marginRight="15dp">
+
+                      <ImageView
+                          android:layout_width="20dp"
+                          android:layout_height="20dp"
+                          android:src="@drawable/newprivacy"
+                          android:tint="#201D1D" />
+
+
+                      <TextView
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_marginLeft="20dp"
+                          android:gravity="center|left"
+                          android:text="Privacy Policy"
+                          android:fontFamily="@font/opensansreg"
+                          android:textSize="@dimen/regular_text_size"
+                          android:textColor="@color/black" />
+                  </LinearLayout>
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="40dp"
+                      android:layout_marginTop="5dp"
+                      android:gravity="center|left"
+                      android:layout_marginLeft="15dp"
+                      android:orientation="horizontal"
+                      android:layout_marginRight="15dp">
+
+                      <ImageView
+                          android:layout_width="20dp"
+                          android:layout_height="20dp"
+                          android:src="@drawable/newlogout"
+                          android:tint="#201D1D" />
+
+
+                      <TextView
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_marginLeft="20dp"
+                          android:gravity="center|left"
+                          android:text="Logout"
+                          android:fontFamily="@font/opensansreg"
+                          android:textSize="@dimen/regular_text_size"
+                          android:textColor="@color/black" />
+                  </LinearLayout>
+              </LinearLayout>
+
+          </ScrollView>
+      </LinearLayout>
+  </com.google.android.material.navigation.NavigationView>
+
+
+
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
