--- a/app/src/main/res/layout/fragment_direct_messages.xml
+++ b/app/src/main/res/layout/fragment_direct_messages.xml
@@ -86,7 +86,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:src="@drawable/new_compose_message"
+        android:src="@drawable/write_2x"
         app:tint = "@color/white"
         app:maxImageSize="20dp"
         android:layout_gravity="bottom|right"
